--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
 	"manifest_version": 2,
 	"name": "LGTM",
-	"version": "0.1",
+	"version": "1.1.0",
 	"description": "この画像でLGTMします.",
-	"permissions": ["contextMenus", "tabs", "http://*/*", "https://*/*"],
+	"permissions": ["contextMenus"],
+    "icons": {
+        "512": "icon.png"
+    },
 	"background": {
-		"scripts": ["jquery-3.2.1.min.js", "background.js"]
+		"scripts": ["jquery-3.6.0.min.js", "background.js"]
 	}
 }
